@@ -3,11 +3,12 @@ package com.vishalchauhan0688.dailyStandUp.service;
 import com.vishalchauhan0688.dailyStandUp.dto.EmployeeResponseDto;
 import com.vishalchauhan0688.dailyStandUp.dto.QueryParams;
 import com.vishalchauhan0688.dailyStandUp.model.*;
+import com.vishalchauhan0688.dailyStandUp.repository.DailyUpdatePostRepository;
+import com.vishalchauhan0688.dailyStandUp.repository.EmployeeTeamRoleRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
-import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -20,17 +21,17 @@ public class ReportingService {
     private final TicketService ticketService;
     private final ProjectService projectService;
     private final TeamService teamService;
-    private final DailyUpdateService dailyUpdateService;
+    private final DailyUpdatePostRepository dailyUpdatePostRepository;
     private final TicketDependencyService dependencyService;
+    private final EmployeeTeamRoleRepository employeeTeamRoleRepository;
 
     /* ===================== EMPLOYEE ===================== */
 
     public Map<String, Object> getEmployeeWorkload(Long employeeId) {
-
         Employee employee = employeeService.findByIdEntity(employeeId)
                 .orElseThrow(() -> new RuntimeException("Employee not found"));
 
-        List<Ticket> tickets = fetchTickets("createdBy.id:eq:" + employeeId);
+        List<Ticket> tickets = fetchTickets("owner.id:eq:" + employeeId);
 
         return Map.of(
                 "employeeId", employeeId,
@@ -44,22 +45,27 @@ public class ReportingService {
     /* ===================== TEAM ===================== */
 
     public Map<String, Object> getTeamProgress(Long teamId) {
-
         Team team = teamService.findById(teamId);
         List<Project> projects = fetchProjects("team.id:eq:" + teamId);
 
-        List<Ticket> teamTickets = team.getEmployees().stream()
-                .flatMap(emp -> fetchTickets("createdBy.id:eq:" + emp.getId()).stream())
+        // Get all team members through EmployeeTeamRole
+        List<EmployeeTeamRole> teamRoles = employeeTeamRoleRepository.findByTeamId(teamId);
+        List<Long> employeeIds = teamRoles.stream()
+                .map(etr -> etr.getEmployee().getId())
+                .collect(Collectors.toList());
+
+        List<Ticket> teamTickets = employeeIds.stream()
+                .flatMap(empId -> fetchTickets("owner.id:eq:" + empId).stream())
                 .collect(Collectors.toList());
 
         List<Map<String, Object>> projectProgress = projects.stream()
-                .map(p -> projectProgress(p))
+                .map(this::projectProgress)
                 .collect(Collectors.toList());
 
         return Map.of(
                 "teamId", teamId,
                 "teamName", team.getTeamName(),
-                "memberCount", team.getEmployees().size(),
+                "memberCount", teamRoles.size(),
                 "totalTickets", teamTickets.size(),
                 "statusDistribution", statusDistribution(teamTickets),
                 "projectProgress", projectProgress
@@ -69,7 +75,6 @@ public class ReportingService {
     /* ===================== PROJECT ===================== */
 
     public Map<String, Object> getProjectHealth(Long projectId) {
-
         Project project = projectService.findById(projectId);
         List<Ticket> tickets = fetchTickets("project.id:eq:" + projectId);
 
@@ -84,7 +89,7 @@ public class ReportingService {
         List<Map<String, Object>> late = tickets.stream()
                 .filter(t -> t.getEndDate() != null
                         && t.getEndDate().isBefore(today)
-                        && !t.getStatus().getStatus().equalsIgnoreCase("completed"))
+                        && !t.getStatus().getStatus().equalsIgnoreCase("DONE"))
                 .map(t -> lateTicketView(t, today))
                 .collect(Collectors.toList());
 
@@ -106,22 +111,11 @@ public class ReportingService {
     /* ===================== DAILY STANDUP ===================== */
 
     public Map<String, Object> getDailyStandupReport(LocalDate date) {
-
-        ZoneId zone = ZoneId.systemDefault(); // or ZoneOffset.UTC if you standardize on UTC
-
-        List<DailyUpdate> updates = dailyUpdateService.findAll().stream()
-                .filter(u ->
-                        u.getCreatedAt() != null &&
-                                u.getCreatedAt()
-                                        .atZone(zone)
-                                        .toLocalDate()
-                                        .equals(date)
-                )
-                .toList();
+        List<DailyUpdatePost> updates = dailyUpdatePostRepository.findByDate(date);
 
         List<Map<String, Object>> employeeUpdates = updates.stream()
                 .map(this::dailyUpdateView)
-                .toList();
+                .collect(Collectors.toList());
 
         return Map.of(
                 "date", date,
@@ -130,37 +124,14 @@ public class ReportingService {
         );
     }
 
-
-    /* ===================== MANAGER ===================== */
-
-    public Map<String, Object> getManagerView(Long managerId) {
-
-        Employee manager = employeeService.findByIdEntity(managerId)
-                .orElseThrow(() -> new RuntimeException("Manager not found"));
-
-        List<EmployeeResponseDto> subs = employeeService
-                .findAll(filter("manager.id:eq:" + managerId))
-                .getContent();
-
-        List<Map<String, Object>> subordinateWork = subs.stream()
-                .map(sub -> employeeWorkView(sub))
-                .collect(Collectors.toList());
-
-        return Map.of(
-                "managerId", managerId,
-                "managerName", manager.getName(),
-                "subordinateCount", subs.size(),
-                "subordinateWork", subordinateWork
-        );
-    }
-
     /* ===================== OVERALL ===================== */
 
     public Map<String, Object> getOverallDashboard() {
-
         List<Team> teams = teamService.findAll();
         List<Project> projects = projectService.findAll();
-        List<Ticket> tickets = ticketService.findAll();
+        List<Ticket> tickets = ticketService.findAll().stream()
+                .filter(t -> t.getDeletedAt() == null)
+                .collect(Collectors.toList());
 
         return Map.of(
                 "totalTeams", teams.size(),
@@ -211,7 +182,7 @@ public class ReportingService {
     private Map<String, Object> blockedTicketView(Ticket t) {
         return Map.of(
                 "ticketId", t.getId(),
-                "jiraId", t.getExternalId(),
+                "jiraId", t.getJiraId(),
                 "title", t.getTitle(),
                 "blockingDependencies",
                 dependencyService.findUnresolvedDependenciesByTicketId(t.getId()).size()
@@ -221,38 +192,30 @@ public class ReportingService {
     private Map<String, Object> lateTicketView(Ticket t, LocalDate today) {
         return Map.of(
                 "ticketId", t.getId(),
-                "jiraId", t.getExternalId(),
+                "jiraId", t.getJiraId(),
                 "title", t.getTitle(),
                 "endDate", t.getEndDate(),
                 "daysOverdue", ChronoUnit.DAYS.between(t.getEndDate(), today)
         );
     }
 
-    private Map<String, Object> dailyUpdateView(DailyUpdate u) {
+    private Map<String, Object> dailyUpdateView(DailyUpdatePost u) {
         return Map.of(
                 "employeeId", u.getEmployee().getId(),
                 "employeeName", u.getEmployee().getName(),
-                "generalDescription", u.getGeneralDescription(),
+                "teamId", u.getTeam().getId(),
+                "teamName", u.getTeam().getTeamName(),
+                "date", u.getDate(),
+                "generalNotes", u.getGeneralNotes() != null ? u.getGeneralNotes() : "",
                 "ticketMentions", u.getTicketMentions().stream()
                         .map(tm -> Map.of(
                                 "ticketId", tm.getTicket().getId(),
-                                "jiraId", tm.getTicket().getExternalId(),
+                                "jiraId", tm.getTicket().getJiraId(),
                                 "title", tm.getTicket().getTitle(),
                                 "description", tm.getDescription()
                         ))
                         .collect(Collectors.toList()),
                 "createdAt", u.getCreatedAt()
-        );
-    }
-
-    private Map<String, Object> employeeWorkView(EmployeeResponseDto emp) {
-        List<Ticket> tickets = fetchTickets("createdBy.id:eq:" + emp.getId());
-        return Map.of(
-                "employeeId", emp.getId(),
-                "employeeName", emp.getName(),
-                "totalTickets", tickets.size(),
-                "statusDistribution", statusDistribution(tickets),
-                "tickets", tickets
         );
     }
 
